# cpp_worker_starter

./: CMakeLists.txt  README.md  cmake_command_example.txt
sjson/: CMakeLists.txt
sjson/include/sjson/: sjson.h
sjson/src/: sjson.cpp
slog/: CMakeLists.txt
slog/include/slog/: slog.h
slog/src/: slog.cpp
src/: main.cpp
